--- a/styles/highjacked-window.css
+++ b/styles/highjacked-window.css
@@ -6,16 +6,13 @@
 
 .ech-highjack-window {
 	height: auto !important;
-    font-family: var(--ech-font-family);
 }
 
 .ech-highjack-window .window-header {
 	backdrop-filter: blur(6px);
-    background-color: rgb(255 255 255 / 80%);
 	border-bottom-width: 0px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
-    color: rgb(65, 65, 70);
     padding: 1rem 0.5rem;
     position: relative;
     text-align: center;
@@ -41,12 +38,10 @@
 .ech-highjack-window .window-content {
 	backdrop-filter: blur(6px);
 	background-image: none;
-    background-color: var(--ech-color-tooltip);
-    border: 1px solid var(--ech-border-color);
+    border: 1px solid transparent;
 	border-top-width: 0px;
 	border-bottom-left-radius: 3px;
 	border-bottom-right-radius: 3px;
-    color: var(--ech-fore-color);
 }
 .ech-highjack-window .window-content .form-group {
 	margin: 0.5rem 0rem;
@@ -54,30 +49,23 @@
 .ech-highjack-window .window-content .form-group input,
 .ech-highjack-window .window-content .form-group select {
 	border-radius: 0px;
-    color: var(--ech-fore-color);
     padding: 0.5rem;
     height: auto;
-    background: rgba(0 0 0 / 0.5);
     border-width: 0px;
 }
 
 .ech-highjack-window .window-content .form-group select * {
-    background: var(--ech-color);
     padding: 0.5rem 0.75rem;
 }
 .ech-highjack-window .window-content .form-group input:disabled,
 .ech-highjack-window .window-content .form-group input::placeholder {
-	color: var(--ech-fore-color);
 	opacity: 0.6;
 }
 .ech-highjack-window .dialog-buttons {
 	margin-top: 0.5rem;
 }
 .ech-highjack-window .dialog-buttons button {
-    color: rgb(255, 255, 255);
-    background-color: rgb(80 150 195);
-    border-color: rgb(80 150 195);
-    border: 1px solid rgb(80 150 195);
+    border: 1px solid transparent;
     border-radius: 0;
     margin: 0px;
 }
@@ -90,14 +78,4 @@
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
     border-left-width: 0px;
-}
-.ech-highjack-window .dialog-buttons button.default {
-    background: rgb(85 190 245);
-    border: 1px solid rgb(85 190 245);
-}
-.ech-highjack-window .dialog-buttons button:hover, 
-.ech-highjack-window .dialog-buttons button:focus {
-    outline: none;
-    box-shadow: none;
-	filter: brightness(110%);
 }
