--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -1,5 +1,5 @@
 <div class="extended-combat-hud">
-	<link href="https://fonts.googleapis.com/css?family=Pacifico:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<div class="weapon-sets">
 		<div class="weapon-set active" data-type="switchWeapons" data-value="set1">
 			<div class="set set-primary" draggable="true" data-set="set1p" style="background-image: url({{hudData.sets.set1.primary.data.img}})"></div>
