Updated Themes and Fixes
Themed all X number of themes... Its late, I forgot, to lazy to count

Fixed Random Issues

Fixed Check not being highjacked by Argon

--- a/styles/ActionHUD.css
+++ b/styles/ActionHUD.css
@@ -248,9 +248,13 @@
     position: relative;
     width: 150px;
     margin-right: 1rem;
-    cursor: pointer;
+    transition: all 0.3s ease-in-out;
   
-  pointer-events: all;
+    pointer-events: all;
+    cursor: pointer;
+}
+.feature-element:hover {
+  filter: brightness(150%);
 }
 
 .features-container.is-spells .feature-element {
