--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -1,4 +1,4 @@
-<div class="extended-combat-hud">
+<div class="extended-combat-hud fade-out-inactive-{{hudData.settings.fadeOutInactive}}">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<div class="weapon-sets">
 		<div class="weapon-set active" data-type="switchWeapons" data-value="set1">
