Export Theme and Abilities Menu Fix
Added the ability to export a theme. Auto creates json file.
Fixed Theme Dropdown to refresh after exporting theme to show new themes.

Fixed Ability Toggle Button to use text shadow instead of filter brightness.

--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -272,9 +272,9 @@
 .ech-show-ability-menu .ability-menu ul.ability-toggle li:after {
     transform: rotate(0deg);
 }
-.ability-menu ul:last-child > li:hover {
+/*.ability-menu ul:last-child > li:hover {
     filter:brightness(150%);
-}
+}*/
 
 .weapon-sets {
     display: flex;
