--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -67,6 +67,15 @@
     top: 0px;
     width: 100%;
 }
+.portrait-stat-block.player-details.player-details-bottom {
+    top: auto;
+    bottom: 0px;
+    z-index: -1;
+    flex-direction: column-reverse;
+    padding-bottom: 3.5rem;
+    background: linear-gradient(0deg, rgba(65,75,85,0.9) 0%, rgba(70,80,90,0.8) 75%, rgba(75,85,95,0) 100%);
+}
+
 .portrait-stat-block.player-details .player-detail {
     font-size: 1rem;
     overflow: hidden;
