--- a/styles/theme.css
+++ b/styles/theme.css
@@ -9,7 +9,7 @@
 	/* ADD THEME OPTIONS */
   background-color: rgb(0 0 0 / 30%);
   border: 1px solid var(--ech-mainAction-base-border);
-  color: rgb(150, 150, 150);
+  color: rgb(200 200 200);
 }
 .actions-container.has-actions:after {
 	/* ADD THEME OPTIONS */
