--- a/styles/theme.css
+++ b/styles/theme.css
@@ -96,7 +96,7 @@
 	/* ADD THEME OPTIONS */
     background-color: rgb(0 0 0 / 30%);
     border-color: var(--ech-mainAction-base-border);
-	color: rgb(150, 150, 150);
+	color: rgb(200 200 200);
 }
 .feature-spell-slots {
 	/* ADD THEME OPTIONS */
@@ -356,7 +356,7 @@
 	/* ADD THEME OPTIONS */
     background-color: rgb(0 0 0 / 30%);
 	border-color: var(--ech-mainAction-base-border);
-    color: rgb(150, 150, 150);
+    color: rgb(200 200 200);
 }
 .movement-hud .movement-current {
 	/* ADD THEME OPTIONS */
