--- a/styles/ActionHUD.css
+++ b/styles/ActionHUD.css
@@ -132,6 +132,8 @@
   bottom: 270px;
   display: flex;
   flex-direction: row;
+  flex-flow: wrap-reverse;
+  max-width: 70%;
   font-size: 16px;
   font-weight: 700;
   margin-left: 0px;
@@ -256,7 +258,7 @@
     width: 150px;
     margin-right: 1rem;
     transition: all 0.3s ease-in-out;
-  
+    margin-top: 0.70rem;
     pointer-events: all;
     cursor: pointer;
 }
