--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -43,9 +43,9 @@
 				</span>
 		</div>
 		<div class="player-buttons">
-			<div class="player-button" onClick="canvas.hud.enhancedcombathud.hudData.actor.rollInitiative({ rerollInitiative: true, createCombatants: true });"><i class="fas fa-dice-d20"></i></div>
+			<a class="player-button" title="{{hudData.settings.localize.InitiativeRoll}}" onClick="canvas.hud.enhancedcombathud.hudData.actor.rollInitiative({ rerollInitiative: true, createCombatants: true });"><i class="fas fa-dice-d20"></i></a>
 			<div class="player-button" onclick="canvas.hud.enhancedcombathud.hudData.actor.sheet.render(true);"><i class="fas fa-suitcase"></i></div>
-			<div class="ech-close player-button" onclick="$(`.control-tool[data-tool='echtoggle']`).trigger('click')"><i class="fas fa-sort-down"></i></div>
+			<div class="ech-close player-button" onclick="canvas.hud.enhancedcombathud.toggleMinimize()"><i class="fas fa-sort-down"></i></div>
 
 		</div>
 	</div>
