--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -25,7 +25,7 @@
     font-weight: 900;
     justify-content: center;
     margin-bottom: -1px;
-    padding: 0.75rem 1rem;
+    padding: 0.75rem;
     position: relative;
 }
 .portrait-stat-block:not(.player-details):before{
